Closed Bug 635014 Opened 13 years ago Closed 13 years ago

Don't draw the checkerboard behind undefined content in "sync scrolling mode"

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: cjones, Assigned: cjones)

References

Details

Attachments

(1 file)

Reftests that set a custom CSS viewport/displayport can create a shadow layer tree that doesn't cover the <browser remote> in the chrome process.  Previously, we just didn't paint the exposed area (which is not great, but meh).  We got by with that because the background was cleared to white.  Now that we're drawing a checkerboard over undefined content, we don't get away with that any more.

The simplest fix is to just not draw a checkerboard in sync mode.  A minor issue that arose is that we had a small regression from bug 605618 in that we don't initialize the nsFrameLoader's mRenderMode in the platform.  It used to be a member of ViewportConfig.  (Fennec always sets it explicitly, so it's not a problem in the field.)
Attachment #513228 - Flags: review?(tnikkel) → review+
Comment on attachment 513228 [details] [diff] [review]
Don't draw a checkerboard behind undefined <browser remote> content in sync mode

Safe patch that fixes uninit member in frameloader and is needed to test bug 593243.
Attachment #513228 - Flags: approval2.0?
Comment on attachment 513228 [details] [diff] [review]
Don't draw a checkerboard behind undefined <browser remote> content in sync mode

a=beltzner
Attachment #513228 - Flags: approval2.0? → approval2.0+
http://hg.mozilla.org/mozilla-central/rev/004e15c38fa0
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: