Bug 635014: Don't draw a checkerboard behind undefined <browser remote> content in sync mode. r=tn a=a