content/base/src/nsFrameLoader.cpp
@@ -332,6 +332,7 @@ nsFrameLoader::nsFrameLoader(nsIContent *aOwner, PRBool aNetworkCreated)
   , mCurrentRemoteFrame(nsnull)
   , mRemoteBrowser(nsnull)
 #endif
+  , mRenderMode(RENDER_MODE_DEFAULT)
 {
 }
 
